--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   	<span style="color:red;display:block; text-align:center">El título introducido no consta en la base de datos de murciaSTUDIO</span>
   	<% } %>
 
-  	<div id="wrap" style="width:100%; height:500px;display: table; text-align:center; background: url('/images/titulos.png')no-repeat; background-size:50%; background-position:50%;">
+  	<div id="wrap" style="width:100%; height:100vh;display: table; text-align:center; background: url('/images/titulos.png')no-repeat; background-size:50%; background-position:50%;">
 
 
   	<form method='get' action="/verify" style="display:table-cell;vertical-align:middle; width:200px; margin: auto">
