--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,9 @@
 	nav{background:rgba(0, 0, 0, 0.7) none repeat scroll 0% 0% !important;}
 	a {text-decoration: none; color:white;}
 	#admin-header{color:#353F40;}
+	@media(max-width:850px){
 	#wrap{background:transparent url("/images/titulos.png") center !important}
+	}
 
 </style>
 
