--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,7 @@
 	a {text-decoration: none; color:white;}
 	#admin-header{color:#353F40;}
 	@media(max-width:850px){
-	#wrap{background:transparent url("/images/titulos.png") center !important}
+	#wrap{background:transparent url("/images/titulos.png") center !important; background-repeat:repeat-x;}
 	}
 
 </style>
