--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,7 +14,7 @@
 	@media(max-width:850px){
 	#wrap{background:url("/images/titulos.png") center repeat-x !important;}
 	}
-	table{border:1px solid #353F40}
+	table{border:1px solid #353F40; background:#343E40;}
 	td{border:1px solid #353F40; background:#B1D2D8}
 	thead{font-weight:bold}
 
