--- a/views/titulos.ejs
+++ b/views/titulos.ejs
@@ -6,7 +6,7 @@
 <table style="margin:0 auto">
 	<thead>
 		<tr>
-			<td>Nombre</td><td>Apellidos</td><td>DNI</td><td>Teléfono</td><td>Curso</td><td>Horas</td><td>Inicio</td><td>Fin</td><td>Código</td>
+			<td>Nombre</td><td>Apellidos</td><td>DNI</td><td>Teléfono</td><td>Curso</td><td>Horas</td><td>Código</td><td>Inicio</td><td>Fin</td>
 		</tr>
 	</thead>
 
@@ -26,7 +26,8 @@
 		<td><%= titulos[i].fin %></td>
 		<td><a href="/titles/<%= titulos[i].id %>/render">Renderizar</a></td>
 		<td><a href="/titles/<%= titulos[i].id %>/edit">Editar</a></td>
-		<td><a href="/titles/<%= titulos[i].id %>/delete">Eliminar</a></td>
+		<td><form method="post" action="/titles/<%= titulos[i].id %>?_method=delete"><button type="submit" onclick="return confirm('¿Seguro que desea liminar el título?');"><i class="fa fa-trash"></i>
+ </button></form></td>
 
 	</tr>
 <% } %>
