Revert df1e48e..4f3ef2b
This rolls back to commit df1e48e459f63f525c98027b5b826232dec67725.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,12 @@
 	nav{background:rgba(0, 0, 0, 0.7) none repeat scroll 0% 0% !important;}
 	a {text-decoration: none; color:white;}
 	#admin-header{color:#353F40;}
+	@media(max-width:850px){
+	#wrap{background:url("/images/titulos.png") center repeat-x !important;}
+	}
+	table{border:1px solid #353F40; background:#343E40;}
+	td{border:1px solid #353F40; background:#B1D2D8}
+	thead{font-weight:bold}
 
 </style>
 
